--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <main id="root" class="container"></main>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
